<resources>
    <string name="app_name">AppDependencia</string>
    <string name="alertButton" translatable="false">ALERT</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_red_button" translatable="false">redButtonActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="configuration" translatable="false">Configuration</string>
    <string name="logout" translatable="false">Log Out</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="map">Map</string>
    <string name="events">Events</string>
    <string name="boton_rojo">Red Button</string>
    <string name="tv_DNI">Dependent ID</string>
    <string name="tv_dependent_name">Dependent\'s name</string>
    <string name="tv_email">E-mail</string>
    <string name="tv_passwd">Password</string>
    <string name="bt_login">Log In</string>
    <string name="bt_ok">OK</string>
    <string name="bt_cancel">Cancel</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_alerts">Alerts</string>
    <string name="title_activity_ubication">s</string>
    <string name="contacts_read_right_required">Permissions needed to keep working</string>
    <string name="conf_call_red">You are going to receive a call</string>
    <string name="conf_call_green">If you can\'t reply back, AID will be directed towards you</string>
    <string name="conf_call_black">If you wish to cancel the call, drag the bar until it reaches CANCEL</string>
    <string name="conf_call_cancel">Cancel</string>
    <string name="llamadaCancelada">Call canceled correctly</string>
    <string name="llamandoEmergencias">Making contacti with th emergency services</string>
    <string name="tbMedic">View Medicines</string>
    <string name="tbAll">View All</string>
    <string name="tvEmptyList">The list is empty</string>
    <string name="title_activity_configuracion" translatable="false">ConfiguracionActivity</string>
    <string name="dependentDNI" translatable="false">DNI</string>
    <string name="ip_asistente">Assistent</string>
    <string name="informes">Reports</string>
    <string name="mostrar_ocultar_passwd">Show/Hide Password</string>
    <string name="dayNight">Change Day/Night Mode</string>
    <string name="informe_medicamentos">Print Medicines Report</string>
    <string name="informe_tareas_varias">Print General Tasks Report</string>
    <string name="ya_esta_editando">You are still editing</string>
    <string name="introducir_userpasswd_hint">Password</string>
    <string name="titulo_dependiente">Insert Dependent Password</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="correct_password">Correct Password</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="titulo_alert_dialog">ERROR!</string>
    <string name="app_dependencia_nombre" translatable="false">App Dependencia</string>
    <string name="nombre_grupo" translatable="false">Group 2</string>
    <string name="intervalos">Sends GPS information each</string>
    <string name="minutes">minutes</string>
    <string name="MedicinesDocument">MedicinesListReport</string>
    <string name="OtherTasksDocument">TasksListReport</string>
    <string name="dropped_pin">Place Selected</string>
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
    <string name="tv_number">Number</string>
    <string name="tvHistory">History</string>
    <string name="tvNotifications">Notifications</string>
    <string name="btDone">Done!</string>
    <string name="noNotifications">No notifications</string>
    <string name="keepComing">Keep coming back for updates!</string>
    <string name="btUndone">Undone</string>
    <string name="btArchive">View Archive</string>
    <string name="btRecent">View Recent</string>
    <string name="EmptyHistory">History is empty</string>
    <string name="location_permission_denied">Location access permission is required</string>
    <string name="alertDialogMessage">There is no conection, the application initialized in Offline mode.\nThe Red Buttons may not work so call to your assistent inmediatly</string>
    <string name="yesAlert">Yes</string>
    <string name="configurationPassword">Password</string>
    <string name="no_hay_ip_asistente">There isn\'t an Assistant IP, please introduce one</string>
    <string name="notification_id_channel">New notifications</string>
    <string name="NewNotifications">New notifications</string>
    <string name="CheckApp">Check your app to read the new notifications received</string>
</resources>
