<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginLayout"
    android:background="@drawable/waterbgwhite"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:id="@+id/tvLoginPasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tv_passwd"
        android:textColor="@color/colorRedDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/et_DependentDNI"
        app:layout_constraintTop_toBottomOf="@+id/et_DependentDNI" />

    <TextView
        android:id="@+id/tvDependentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_DNI"
        android:textColor="@color/colorRedDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bt_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.374"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline16"
        app:layout_constraintVertical_bias="0.0" />

...
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/tvDependentName"
        app:layout_constraintTop_toBottomOf="@+id/tvDependentName" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintStart_toStartOf="@+id/tvLoginPasswd"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7916667" />

    <TextView
        android:id="@+id/tvlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
...
