<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/emergencias"
        android:icon="@drawable/ic_emergencias"
        android:title="@string/boton_rojo" />

    <item
        android:id="@+id/notificaciones"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/eventos"
        android:icon="@drawable/ic_custom_events"
        android:title="@string/events" />

    <item
        android:id="@+id/googlemap"
        android:icon="@drawable/ic_custom_map"
        android:title="@string/map" />

    <item
        android:id="@+id/configuracion"
        android:icon="@drawable/ic_configuracion"
        android:title="@string/configuration"/>

</menu>
